/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/


2025-07-07 18:10 UTC+0200 Wilfried Brunken DF7BE
* Install_RaspberryPi.txt
  ! Instructions for Raspberry Pi 5 added


2025-07-04 16:20 UTC+0200 Wilfried Brunken DF7BE
* source/cross/hmisccross.prg
* doc/hwgdoc_functions.html
* samples/demo.ch
  ! New Function hwg_UNIX2DOS()
  ! added, for common purposes.
  ! The code in demo.ch is moved
  ! to this function.


2025-06-24 17:00 UTC+0200 Wilfried Brunken DF7BE
* samples/allhbp.hbp
* samples/demoall.hbp
* samples/demoall.prg
* samples/demoxmltree.prg
   ! Bugfix  samples demo by Jose Quintas on MacOS:
   ! Windows only functions (unresolved symbols):	
   !  HB_GT_GUI_DEFAULT(), HWG_SAVEFILE(), HWG_SELECTMULTIPLEFILES()    
   ! Not solved yet:
   ! utfConvert() in demoxmltree.prg
   ! ICONV_CLOSE(),
   ! On MacOS, the libiconv not in GNU and not compatible
   ! so skip this sample


2025-06-23 16:35 UTC+0200 Wilfried Brunken DF7BE
* doc/hwgdoc_functions.html
* samples/demo.ch
* source/cross/hmisccross.prg
  ! Bugfix hwg_MemoEdit():
  ! - Size of Button "Save" increased for GTK
  ! - Last line not full visible
  !   (so new function hwg_MEMLLEMPTY() added)
  ! - Scrollbar on Windows added
  !   (The STYLE term has no effect on GTK,
  !   scroll with up/down keys through the memo text)
  ! Demoall: (to Jose Quintas)
  ! Correct handling of line endings
  ! in Code view window,
  ! must be forever CRLF !
  ! (This is mandatory for memo fields)


2025-06-22 13:10 UTC+0200 Wilfried Brunken DF7BE
* source/cross/hmisccross.prg
* doc/hwgdoc_functions.html
* contrib/qrcode/qrdecode/qrdecode.prg
 ! Autodetect Raspberry Pi for 
 ! calling "zbarcam".
 ! New Function hwg_IsRaspberry()