@@ -14,7 +14,7 @@
   </tr>
   <tr>
     <td width="15%" align="left"><a href="hwgdoc_commands.html">prev</a></td>
-    <td width="70%" align="center">Alexander S.Kresin, June 2025</td>
+    <td width="70%" align="center">Alexander S.Kresin, August 2025</td>
     <td width="15%" align="right"><a href="hwgdoc_classes.html">next</a></td>
   </tr>
 </table>
@@ -227,7 +227,7 @@ Find this code also in "utils\devtools\dbfcompare.prg".<br>
      <li> Return value ( string ) - the string, which you entered, empty - if you press CANCEL.
    </ul>
 
-   <br><strong class="subhead"> hwg_WChoice( arr, cTitle, nLeft, nTop, oFont, clrT, clrB, clrTSel, clrBSel, cOk, cCancel )</strong>
+   <br><strong class="subhead"> hwg_WChoice( arr, cTitle, nLeft, nTop, oFont, clrT, clrB, clrTSel, clrBSel, cOk, cCancel,nwline)</strong>
    <br>Creates a dialog box to select from a list.
    <ul>
      <li> arr - an array, one-dimensional or multidimensional, which represents the list;
@@ -240,6 +240,20 @@ Find this code also in "utils\devtools\dbfcompare.prg".<br>
      <li> cCancel - a caption of a button to cancel selecting. If this parameter is omitted, the button will not present;
      <li> Return value - the number of selected row, 0 - if nothing is selected.
    </ul>
+
+   Important !<br>
+   Workaround for bug in GTK (GetTextMetric does not work correct):<br>
+   The new parameter "nwline" is ignored on WinAPI,<br>
+   because the functions works correct on Windows,<br>
+   it is the height for every line in the array to browse.<br>
+   The default value is 21, this seems to be suitable for default font<br>
+   "Times", 0, 14 .<br>
+   Please make experiments with this parameter if<br>
+   other fonts are used.<br>
+   For details and symptom description see<br>
+   test program test/tickets/Ticket90.prg.<br>
+
+    <p></p>
 
    <br><strong class="subhead"><a name="Functions3" href="hwgdoc.html#_Functions3">
    5.3.  Drawing functions.</a></strong><br>
